--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ROUTER_IP="192.3.48.1"
+ROUTER_PREFIX="2a0e:b107:14ef:784d:b47c:d7e5:"
+ROUTER_PASSWORD="xxoo"
