修改示例文件

--- a/.env.example
+++ b/.env.example
@@ -51,5 +51,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ROUTER_IP="192.3.48.1"
-ROUTER_PREFIX="2a0e:b107:14ef:784d:b47c:d7e5:"
+ROUTER_PREFIX="240e:3b0:502d:cc46:dc97:5646:415::/112"
 ROUTER_PASSWORD="xxoo"
