--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kgaJAN+mOicB6gTQmwcORSl4ht38y7n31CUkkcMpxfg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -50,6 +50,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ROUTER_IP="192.3.48.1"
-ROUTER_PREFIX="240e:3b0:502d:cc46:dc97:5646::/96"
-ROUTER_PASSWORD="xxoo"
+ROUTE_API_URL="https://68b32817da58.tunnelbroker.ninja"
+IPV6_PREFIX="2a0f:9400:7860::/48"
