修正IP计算算法(Server IPv4)

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ROUTE_API_URL="https://68b32817da58.tunnelbroker.ninja"
 IPV6_PREFIX="2a0f:9400:7860::/48"
+SERVER_IPV4="5.252.165.201"
